# cortex-skill

./: CLAUDE.md  README.md  SKILL.md
scripts/claw/: pyproject.toml
scripts/claw/src/claw/: __main__.py  completion.py
scripts/claw/src/claw/browser/: __init__.py  launch.py  stop.py  verify.py
scripts/claw/src/claw/common/: gws_util.py
scripts/claw/src/claw/convert/: __init__.py  convert.py  list_formats.py  md2pdf_nolatex.py
scripts/claw/src/claw/doc/: __init__.py  append.py  build.py  create.py  replace.py  tabs.py  tabs_list.py
scripts/claw/src/claw/docx/: __init__.py  comments_dump.py  custom_xml.py  diff.py  hyperlink_add.py  insert_pagebreak.py  section.py  style.py  table_fit.py
scripts/claw/src/claw/drive/: __init__.py  copy.py  delete.py  download.py  info.py  list_.py  move.py  rename.py  share.py  share_list.py  share_revoke.py  upload.py
scripts/claw/src/claw/email/: forward.py
scripts/claw/src/claw/html/: __init__.py  diagnose.py  fmt.py  replace.py  rewrite.py  sanitize.py  unwrap.py  wrap.py
scripts/claw/src/claw/img/: __init__.py  batch.py  exif.py  gif_from_frames.py  overlay.py  rename.py
scripts/claw/src/claw/media/: __init__.py  crop_auto.py  loudnorm.py
scripts/claw/tests/: README.md  _discovery.py  conftest.py  test_cmd_gws.py  test_common.py  test_error_contracts.py  test_examples.py  test_flag_combinations.py  test_flag_coverage.py  test_happy_path.py  test_help.py  test_json_output.py  test_noun_help.py  test_usage_errors.py
scripts/claw/tests/flows/: test_flow_convert_chain.py
scripts/claw/tests/unit/: test_convert.py
(+141 files in other folders)
